[gd_scene load_steps=4 format=3 uid="uid://k0i6k7mcajfm"]

[ext_resource type="Theme" uid="uid://by44nnjeu6u4n" path="res://addons/cogito/Theme/Cogito_Theme_A.tres" id="2_le1ck"]
[ext_resource type="Script" uid="uid://bhfbpanps2m08" path="res://addons/cogito/EasyMenus/Components/SaveSlotButton.gd" id="2_rvlrs"]
[ext_resource type="Texture2D" uid="uid://tjkesqff2f4g" path="res://addons/cogito/Assets/Graphics/EmptySaveSlot.png" id="4_ifjpb"]

[node name="SaveSlotButton" type="Button"]
custom_minimum_size = Vector2(330, 90)
theme_override_font_sizes/font_size = 24
alignment = 0
script = ExtResource("2_rvlrs")
empty_slot_screenshot = ExtResource("4_ifjpb")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_le1ck")
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="SlotName" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_le1ck")
theme_type_variation = &"HUDLabel"
text = "SLOT A"

[node name="SaveTime" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "2024-01-01 12:30"

[node name="Screenshot_Spot" type="TextureRect" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(158, 86)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
texture = ExtResource("4_ifjpb")
expand_mode = 1
stretch_mode = 5
